--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -19,7 +19,7 @@
       className: 'container',
       children: 'Hello World',
     })
-
+    const element = <div className = 'container'>Hello World</div>
     // 💰 there are a few subtle differences between JSX and HTML. One such
     // difference is how you apply a class to an element in JSX is by using
     // `className` rather than `class`!
