--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -1,5 +1,26 @@
 <!-- Basic JavaScript-rendered Hello World -->
 <!-- http://localhost:3000/isolated/exercise/01.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id="root">
+        <script type="module">
+            var div = document.createElement('div')
+            div.textContent = 'Hello World'
+            div.classList.add('container')
+            var root = document.getElementById('root')
+            root.append(div)
+        </script>
+    </div>
+    
+</body>
+</html>
 
 <!-- 🐨 Create (in HTML) a <body> with a <div> with the id of "root" -->
 <!-- 🐨 Then create a <script type="module"> for your JavaScript -->
